<resources>
    <string name="app_name">SortingVisualizer</string>
    <string name="size">size</string>
    <string name="view_algorithm">visualize algorithm</string>
    <string name="choose_algorithm">Choose Algorithm</string>
    <string name="about"><b><i>ABOUT SORTING VISUALIZER: </i></b>Sorting a sequence of items is one of the pillar of Computer Science.A <b>sorting algorithm</b> is an algorithm that organizes elements of a sequence in a certain order. Since the early days of computing, the sorting problem has been one of the main battlefields for researchers. The reason behind this is not only the need of solving a very common task but also the challenge of solving a complex problem in the most efficient way.SORTING VISUALIZER is an attempt to visualize and help to understand how some of the most famous sorting algorithms work. This project is mainly written in JAVA, it provides two standpoints to look at algorithms, one is more artistic (apologies to any real artist out there), the other is more analytical aiming at explaining algorithm step by step.This project does not want to teach the theory of sorting algorithms, there are amazing resources, books and courses for this purpose. SORTING VISUALIZER is for the ones who want to see these algorithms under a different light and hopefully appreciate the processing and brain power behind these piece of genius that in many ways have changed the way we live.</string>
    <string name="artwork"><b><i>SORTING VISUALIZER ALGORITHMS AS ARTWORK: </i></b>Generative Art is one of the ways to represent computational processes. Transforming the data generated by an autonomous system into the features of an artwork can lead to unexpected results.SORTING VISUALIZER was born to create visual representations of sorting algorithms with the hope of finding visual patterns. It turned out that the visual footprints of algorithms are unique and differ from each other and they look gorgeous.</string>
    <string name="analyzing"><b><i>ANALYZING SORTING ALGORITHMS: </i></b>Another way of looking at this project is as an analytical tool to study how sorting algorithms work. Beside generating visuals representations, SORTING VISUALIZER provides a walk-through that guides the reader step after step along the process of ordering a lists of integer numbers.\n All the steps are tracked: comparison operations happening behind the scene through the use of animated indicators, changes of position of items through animations and arcs, and temporary storing of items.\n SORTING VISUALIZER makes it possible to compare how different algorithms behave with different initial set of items.\n The inversions chart adds a measure of the distance from the final goal both in terms of inversions and operations(comparisons and exchanges) that can be tracked during the execution of the algorithm.</string>

    <string name="todo">TODO</string>
    <string name="about_sorting_visualizer">About Sorting Visualizer</string>
    <string name="company_name">DevThrone Inc.</string>

    <string name="insertion">Insertion Sort Algorithm</string>
    <string name="bubble">Bubble Sort Algorithm</string>
    <string name="merge">Merge Sort Algorithm</string>
    <string name="quick">Quick Sort Algorithm</string>
    <string name="shell">Shell Sort Algorithm</string>
    <string name="selection">Selection Sort Algorithm</string>
    <string name="heap">Heap Sort Algorithm</string>
    <string name="count">Count Sort Algorithm</string>
    <string name="bucket">Bucket Sort Algorithm</string>
    <string name="pigeonhole">Pigeonhole Sort Algorithm</string>
    <string name="study_room">Study Room</string>
</resources>