<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<item
    android:title="Menu"
    android:icon="@drawable/ic_menu"
    app:showAsAction="always">
    <menu>
        <item
            android:title="@string/about_sorting_visualizer"
            android:id="@+id/menu_about"
            app:showAsAction="never"
            />
        <item
            android:title="@string/study_room"
            app:showAsAction="never">
            <menu>
                <item
                    android:title="@string/insertion"
                    android:id="@+id/menu_insertion"
                    app:showAsAction="never"
                    />
                <item
                    android:title="@string/bubble"
                    android:id="@+id/menu_bubble"
                    app:showAsAction="never"
                    />
                <item
                    android:title="@string/merge"
                    android:id="@+id/menu_merge"
                    app:showAsAction="never"
                    />
                <item
                    android:title="@string/quick"
                    android:id="@+id/menu_quick"
                    app:showAsAction="never"
                    />
                <item
                    android:title="@string/shell"
                    android:id="@+id/menu_shell"
                    app:showAsAction="never"
                    />
                <item
                    android:title="@string/selection"
                    android:id="@+id/menu_selection"
                    app:showAsAction="never"
                    />
                <item
                    android:title="@string/heap"
                    android:id="@+id/menu_heap"
                    app:showAsAction="never"
                    />
                <item
                    android:title="@string/count"
                    android:id="@+id/menu_count"
                    app:showAsAction="never"
                    />
                <item
                    android:title="@string/bucket"
                    android:id="@+id/menu_bucket"
                    app:showAsAction="never"
                    />
                <item
                    android:title="@string/pigeonhole"
                    android:id="@+id/menu_pigeonhole"
                    app:showAsAction="never"
                    />
            </menu>
        </item>
    </menu>
</item>
</menu>